tests/fixtures/workflows/nested/invalid/path-like-name.invalid
export const meta = {
  name: "path-like-name",
  description: "Calls workflow with path-like name"
};

return await workflow({ name: "./child" });
